# DEVFLOW-FINANCE

./: .gitignore  AGENTS.md  CNAME  DNS_RECORDS.md  ENV_MANIFEST.md  LICENSE  README.md  RESUME_AHMAD_PARR.html  RESUME_AHMAD_PARR.txt  app.html  app.js  docker-compose.yml  index.html  kiwi.html  landing.html  netlify.toml  styles.css
.github/workflows/: azure-static-web-apps-icy-pond-0819ba71e.yml
app/: app.js  index.html  mobile-styles.css  mobile.html  styles.css
collectivekitty/: .env.production  CONTRIBUTING.md  next.config.js  package-lock.json  package.json  staticwebapp.config.json  tsconfig.json
collectivekitty-ml/: README.md  main.py  requirements.txt
collectivekitty-ml/models/: event.py
collectivekitty-ml/routers/: predict.py  score.py
collectivekitty-ml/services/: scoring_engine.py
collectivekitty/connectors/: base.connector.ts  crm.connector.ts  linkedin.connector.ts  opencollective.connector.ts  stripe.connector.ts
collectivekitty/lib/: bifrost.ts  db.ts  eventContract.ts
collectivekitty/pages/: _app.tsx  dashboard.tsx  index.tsx  login.tsx
contracts/: asc606_engine.js
intelligence/: scs_model.py
orchestrator/: bifrost_api.py
pages/: index.tsx
snapkitty-api/: Dockerfile  harvester.js  index.js  package-lock.json  package.json  seed.js
snapkitty-core/: Cargo.toml  README.md
snapkitty-core/benches/: seal_benchmark.rs
snapkitty-core/src/: chain.rs  lib.rs  seal.rs  storage.rs  validate.rs  wasm.rs
snapkitty-crm-api/: .env.example  package-lock.json  package.json
vault/: ledger_reconciliation.sql
(+162 files in other folders)
