[package]
name = "snapkitty-core"
version = "0.1.0"
edition = "2021"
authors = ["Governor Bob <bob@snapkitty.dev>"]
description = "Sovereign Immutable State Machine - The Vault Door"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "seal_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1